<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.phokchanrithisak.layoutframedemo.MainActivity">

    <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:layout_marginTop="24dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:id="@+id/page1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorAccent">

            <TextView
                android:id="@+id/content1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/content1"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/page2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

            <TextView
                android:id="@+id/content2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/content2"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/page3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/mixColor1">

            <TextView
                android:id="@+id/content3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/content3"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/page4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/mixColor2">

            <TextView
                android:id="@+id/content4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/content4"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/page5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:background="@color/mixColor3">

            <TextView
                android:id="@+id/content5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/content5"
                android:textColor="#000000"/>
        </LinearLayout>
    </FrameLayout>

    <Button
        android:id="@+id/prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="78dp"
        android:layout_marginStart="78dp"
        android:text="Previous"
        android:layout_marginBottom="32dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/prev"
        android:layout_marginLeft="66dp"
        android:layout_marginStart="66dp"
        android:layout_toEndOf="@+id/prev"
        android:layout_toRightOf="@+id/prev"
        android:text="Next" />
</RelativeLayout>
